# law-chatbot

./: .gitattributes  .gitignore  .gitmodules  LICENSE.txt  README.md  eslint.config.js  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  server.py
app/: layout.tsx  page.tsx
components/: chatarea.tsx  main-nav.tsx
components/ui/: loading.tsx
index_bm25/: bm25_kiwi_retriever.pkl
index_faiss/: index.faiss  index.pkl
